--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        Let's go
         <meta charset="utf-8">
-        <title></title>
+        <title>Chimble's Portfolio</title>
     </head>
     <body>
         BOYYYY
