--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        Let's go
         <meta charset="utf-8">
-        <title>Chimble's Portfolio</title>
+        <title></title>
     </head>
     <body>
-        BOYYYY
+        BOYYYYa
     </body>
 </html>
