--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
+
 <html>
     <head>
         <meta charset="utf-8">
         <title></title>
+        <link rel="stylesheet" href="static/index.css">
     </head>
     <body>
-        BOYYYYa
+        <h2>Chimble's Portfolio</h2>
+        <button id="myBtn"><a href="chimble_resume.pdf">Resume</a></button>
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+
+            </div>
+        </div>
+        <h4>Resume</h4>
+        <h4><a href='http://www.github.com/chimble'>My Github</a></h4>
+        <h4>Resume</h4>
+
     </body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script type="text/javascript" src="static/index.js"></script>
 </html>
