--- a/index.html
+++ b/index.html
@@ -9,38 +9,43 @@
         <link rel="stylesheet" href="static/index.css">
 
     </head>
-    <body>
+
         <nav id = 'navbarboys' class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="http://www.twitter.com/cameronmoeller">
-                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                        <i id = 'twitterzzz' class="fa fa-twitter" aria-hidden="true"></i>
                     </a>
                     <a class="navbar-brand" href="http://www.github.com/chimble">
-                        <i class="fa fa-github" aria-hidden="true"></i>
+                        <i id = 'githubzzz' class="fa fa-github" aria-hidden="true"></i>
                     </a>
                     <a class="navbar-brand" href="https://plus.google.com/u/0/+cameronmoeller">
-                        <i class="fa fa-google-plus" aria-hidden="true"></i>
+                        <i id = 'googlezzz' class="fa fa-google-plus" aria-hidden="true"></i>
                     </a>
                     <a class="navbar-brand" href="https://www.linkedin.com/in/cameron-moeller-33811733">
-                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        <i id = 'linkedinzzz' class="fa fa-linkedin" aria-hidden="true"></i>
                     </a>
                 </div>
             </div>
         </nav>
+<body>
+        <div id= 'backgroundpic' class="bgimg">
+
+
         <h2>Chimble's Portfolio</h2>
         <button id="myBtn">resume</button>
         <div id="myModal" class="modal">
             <div class="modal-content">
                     <span class="close">&times;</span>
-                    <object type="application/pdf" data="chimble_resume.pdf" width="80%" height="800"></object>
+                    <object type="application/pdf" data="chimble_resume.pdf" width="100%" height="100%"></object>
             </div>
         </div>
         <h4><a href='http://www.github.com/chimble'>My Github</a></h4>
-        <footer>
-            <p>Contact information: <a href="mailto:cameron.moeller@gmail.com">cameron.moeller@gmail.com</a></p>
-        </footer>
-    </body>
+            <footer>
+                <p>Contact information: <a href="mailto:cameron.moeller@gmail.com">cameron.moeller@gmail.com</a></p>
+            </footer>
+        </div>
+</body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
     integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
