--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     </head>
 
-        <nav id = 'navbarboys' class="navbar navbar-default">
+        <nav id = 'navbarboys' class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="http://www.twitter.com/cameronmoeller">
@@ -33,6 +33,7 @@
 
 
         <h2>Chimble's Portfolio</h2>
+
         <button id="myBtn">resume</button>
         <div id="myModal" class="modal">
             <div class="modal-content">
@@ -40,11 +41,29 @@
                     <object type="application/pdf" data="chimble_resume.pdf" width="100%" height="100%"></object>
             </div>
         </div>
-        <h4><a href='http://www.github.com/chimble'>My Github</a></h4>
-            <footer>
-                <p>Contact information: <a href="mailto:cameron.moeller@gmail.com">cameron.moeller@gmail.com</a></p>
-            </footer>
+        <a href='http://www.github.com/chimble'><button id='gitbutt'>My Github</button></a>
+        <div>BIO STUFF IN HERE</div>
+        <table>
+            <tr><td><div class='img'>
+                <img id='tv' src="screenshotboyz.png"width="100%" height="100%">
+                <p class='imgdescription'>This is my description of my first project</p></td>
+            </div>
+            </tr>
+            <tr>
+                <td><div id='tv'>
+
+                </div>proj2</td>
+            </tr>
+            <tr>
+                <td><div id='tv'>
+
+            </div>proj3</td></tr>
+        </table>
+
         </div>
+        <footer>
+            <p>Contact information: <a href="mailto:cameron.moeller@gmail.com">cameron.moeller@gmail.com</a></p>
+        </footer>
 </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
