--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <a href='http://www.github.com/chimble'><button id='gitbutt'>My Github</button></a>
-        <div>BIO STUFF IN HERE</div>
+        <div></div>
         <table>
             <tr><td><div class='img'>
                 <img id='tv' src="screenshotboyz.png"width="100%" height="100%">
